--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.2
+  dio: ^5.3.3
   equatable: ^2.0.5
   firebase_auth: ^4.10.0
   firebase_core: ^2.16.0
