--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   dio: ^5.3.3
   equatable: ^2.0.5
+  file_picker: ^6.0.0
   firebase_auth: ^4.10.0
   firebase_core: ^2.16.0
   flutter:
