--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   get_it: ^7.6.4
   go_router: ^11.0.0
+  image_picker: ^1.0.4
   intl: ^0.18.1
 
 dev_dependencies:
