--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,12 +28,14 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cloud_firestore: ^4.13.1
   cupertino_icons: ^1.0.2
   dio: ^5.3.3
   equatable: ^2.0.5
   file_picker: ^6.0.0
   firebase_auth: ^4.10.0
   firebase_core: ^2.16.0
+  firebase_storage: ^11.5.1
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
