--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   go_router: ^11.0.0
   image_picker: ^1.0.4
   intl: ^0.18.1
+  uuid: ^4.2.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
